немного оптимизации